// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inputs/SearchBar Dark Background 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  position: relative;
  color: #FFF;
  width: 100%;
}

.c2 {
  font-size: 16px;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  color: inherit;
  background-color: rgba(255,255,255,0.1);
  border: 1px solid #FFF;
  border-radius: 25px;
  height: 50px;
  padding: 0 78px 0 22px;
  outline: none;
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: inherit;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::placeholder {
  color: inherit;
  font-style: italic;
}

.c4 {
  position: absolute;
  right: 20px;
  top: 12px;
}

.c0 {
  padding: 1rem;
  background-color: #252525;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        defaultValue=""
        onChange={[Function]}
        type="text"
      />
      <span
        className="c3 c4"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h47.956v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/SearchBar Default 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  position: relative;
  color: #FFF;
  width: 100%;
}

.c2 {
  font-size: 16px;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  color: inherit;
  background-color: rgba(255,255,255,0.1);
  border: 1px solid #FFF;
  border-radius: 25px;
  height: 50px;
  padding: 0 78px 0 22px;
  outline: none;
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: inherit;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::placeholder {
  color: inherit;
  font-style: italic;
}

.c4 {
  position: absolute;
  right: 20px;
  top: 12px;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        defaultValue=""
        onChange={[Function]}
        type="text"
      />
      <span
        className="c3 c4"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h47.956v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/SearchBar Searched 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  position: relative;
  color: #FFF;
  width: 100%;
}

.c2 {
  font-size: 16px;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  color: inherit;
  background-color: rgba(255,255,255,0.1);
  border: 1px solid #FFF;
  border-radius: 25px;
  height: 50px;
  padding: 0 78px 0 22px;
  outline: none;
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: inherit;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::placeholder {
  color: inherit;
  font-style: italic;
}

.c4 {
  position: absolute;
  right: 20px;
  top: 12px;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        data-testid="sample-search"
        defaultValue=""
        onChange={[Function]}
        type="text"
      />
      <span
        className="c3 c4"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h47.956v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/SearchBar With Placeholder 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c1 {
  position: relative;
  color: #FFF;
  width: 100%;
}

.c2 {
  font-size: 16px;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  color: inherit;
  background-color: rgba(255,255,255,0.1);
  border: 1px solid #FFF;
  border-radius: 25px;
  height: 50px;
  padding: 0 78px 0 22px;
  outline: none;
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: inherit;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c2::placeholder {
  color: inherit;
  font-style: italic;
}

.c4 {
  position: absolute;
  right: 20px;
  top: 12px;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        defaultValue=""
        onChange={[Function]}
        placeholder="Search something..."
        type="text"
      />
      <span
        className="c3 c4"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h47.956v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;
